cmake_minimum_required(VERSION 3.16)
project(async_msg_handling_cpp17)

set(CMAKE_CXX_STANDARD 17)

set(BOOST_MIN_VER 1.71)
find_package(Boost 1.71.0 REQUIRED system)

set(COMMON_BUILD_FLAGS "-D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_REENTRANT -pthread -Wall -Wextra -pipe -std=c++17")
set(COMMON_DEBUG_FLAGS "-g")
set(COMMON_RELEASE_FLAGS "-DNDEBUG -O2 -g")
set(CMAKE_CXX_FLAGS_DEBUG "${COMMON_BUILD_FLAGS} ${COMMON_DEBUG_FLAGS}")
set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_BUILD_FLAGS} ${COMMON_RELEASE_FLAGS}")


add_subdirectory(src)
